--- a/src/features/quoter/Quoter.module.css
+++ b/src/features/quoter/Quoter.module.css
@@ -1,30 +1,110 @@
-.row {
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;1,400&display=swap");
+
+.card {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 500px;
+    height: 500px;
+    border-radius: 10px;
+    padding: 25px;
+    background-color: #101010;
+    box-shadow: inset 20px 20px 20px #0000008c;
+    color: var(--color);
+    z-index: 99999;
 }
 
-.value {
-    font-size: 78px;
-    padding-left: 16px;
-    padding-right: 16px;
-    margin-top: 2px;
-    font-family: "Courier New", Courier, monospace;
+.text {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    right: 5%;
+    width: 100%;
+    height: 60%;
+    font-size: 50px;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 400;
+    font-style: italic;
+    color: var(--color);
+    text-align: left;
+}
+
+.author {
+    position: absolute;
+    width: 100%;
+    bottom: 28%;
+    right: 10%;
+    text-align: right;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 200;
+    font-size: 28px;
+}
+
+.tweet-quote:hover {
 }
 
 .button {
-    appearance: none;
-    background: none;
     font-size: 32px;
-    padding-left: 12px;
-    padding-right: 12px;
-    outline: none;
-    border: 2px solid transparent;
-    color: rgb(112, 76, 182);
-    padding-bottom: 4px;
+    padding: 5px 15px;
+    border: 3px solid var(--color);
+    color: var(--color);
     cursor: pointer;
-    background-color: rgba(112, 76, 182, 0.1);
-    border-radius: 2px;
-    transition: all 0.15s;
+    background-color: #181818;
+    border-radius: 10px;
+    transition: all 0.2s;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 400;
+    font-size: 35px;
+}
+
+.button:hover {
+    background-color: #242424;
+}
+
+.cardBackground {
+    width: 515px;
+    height: 515px;
+    box-shadow: 20px 20px 20px #0000008c;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cardBackground::after {
+    content: "";
+    background-image: conic-gradient(var(--color) 20deg, transparent 120deg);
+    width: 150%;
+    height: 150%;
+    position: absolute;
+    animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
+}
+
+.footer {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    bottom: 5%;
+    left: 10px;
+    right: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color);
 }
