--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,200;1,400&display=swap");
+
 .App {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
+    font-size: 3rem;
     background: #181818;
+}
+
+p {
+    position: relative;
+    top: 25px;
+    font-size: 25px;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 200;
+    color: var(--color);
 }
