--- a/src/features/quoter/Quoter.module.css
+++ b/src/features/quoter/Quoter.module.css
@@ -16,30 +16,30 @@
     z-index: 99999;
 }
 
-.text {
+.author {
     position: absolute;
     top: 5%;
     left: 5%;
     right: 5%;
-    width: 100%;
-    height: 60%;
-    font-size: 50px;
+    text-align: left;
+    font-family: "Roboto Mono", monospace;
+    font-weight: 200;
+    font-size: 30px;
+}
+
+.text {
+    position: absolute;
+    top: 15%;
+    left: 5%;
+    right: 5%;
+    height: 65%;
+    font-size: 45px;
     font-family: "Roboto Mono", monospace;
     font-weight: 400;
     font-style: italic;
     color: var(--color);
     text-align: left;
-}
-
-.author {
-    position: absolute;
-    width: 100%;
-    bottom: 28%;
-    right: 10%;
-    text-align: right;
-    font-family: "Roboto Mono", monospace;
-    font-weight: 200;
-    font-size: 28px;
+    overflow: hidden;
 }
 
 .button {
