added some quotes, refined css

--- a/src/features/quoter/Quoter.module.css
+++ b/src/features/quoter/Quoter.module.css
@@ -33,31 +33,13 @@
     left: 5%;
     right: 5%;
     height: 65%;
-    font-size: 45px;
+    font-size: 40px;
     font-family: "Roboto Mono", monospace;
     font-weight: 400;
     font-style: italic;
     color: var(--color);
     text-align: left;
     overflow: hidden;
-}
-
-.button {
-    font-size: 32px;
-    padding: 5px 15px;
-    border: 3px solid var(--color);
-    color: var(--color);
-    cursor: pointer;
-    background-color: #181818;
-    border-radius: 10px;
-    transition: all 0.2s;
-    font-family: "Roboto Mono", monospace;
-    font-weight: 400;
-    font-size: 35px;
-}
-
-.button:hover {
-    background-color: #242424;
 }
 
 .cardBackground {
@@ -101,7 +83,29 @@
     right: 10px;
 }
 
-a {
-    text-decoration: none;
+.button {
+    font-family: "Roboto Mono", monospace;
+    font-weight: 400;
+}
+
+a,
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    padding: 5px 15px;
+    border: 3px solid var(--color);
     color: var(--color);
+    cursor: pointer;
+    background-color: #181818;
+    border-radius: 10px;
+    transition: all 0.2s;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+a:hover,
+.button:hover {
+    background-color: #242424;
 }
